--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -264,10 +264,10 @@
         <mat-expansion-panel [disabled]="!form.get('ditta_lavori').enabled" formGroupName="ditta_lavori" class="referente-group" [expanded]="form.get('ditta_lavori').enabled">
             <mat-expansion-panel-header>
                 <mat-panel-title>
-                  Esecutore lavori 
+                  Ditta
                 </mat-panel-title>
                 <mat-panel-description>
-                  Esecuzione lavori
+                  Informazioni della ditta adetta ai lavori
                 </mat-panel-description>
             </mat-expansion-panel-header>
             <mat-form-field class="div-half" appearance="outline">
