--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -1,10 +1,5 @@
 
     <form [formGroup]="form">
-        <div class="div-checkbox">
-            <mat-checkbox formControlName="delegato"
-            (change)="changeDelegato($event, form.get('tecnico'))" >Sottomissione per conto terzi</mat-checkbox>
-            <mat-error>{{getErrorMessage(form.get('delegato'))}}</mat-error>
-        </div>
         <mat-expansion-panel formGroupName="referente" class="referente-group" expanded>
             <mat-expansion-panel-header>
                 <mat-panel-title>
@@ -169,6 +164,11 @@
             </mat-form-field>
             <mat-error>{{getErrorMessage(form.get('referente'))}}</mat-error>
         </mat-expansion-panel>
+        <div class="div-checkbox">
+            <mat-checkbox formControlName="delegato"
+            (change)="changeDelegato($event, form.get('tecnico'))" >Sottomissione per conto terzi</mat-checkbox>
+            <mat-error>{{getErrorMessage(form.get('delegato'))}}</mat-error>
+        </div>
         <mat-expansion-panel [disabled]="!form.get('tecnico').enabled" formGroupName="tecnico" class="referente-group" [expanded]="form.get('tecnico').enabled">
             <mat-expansion-panel-header>
                 <mat-panel-title>
@@ -450,7 +450,97 @@
             </mat-form-field>
             <mat-error>{{getErrorMessage(form.get('ditta_lavori'))}}</mat-error>
         </mat-expansion-panel>
-        
+        <div class="div-radio-group">
+            <mat-label>In qualità di:</mat-label>
+            <mat-radio-group formControlName="qualifica" class="vartical-radiobutton"
+            (change)="changeQualifica($event, form.get('amministratore'))">
+              <ng-container *ngFor="let qualifica of qualifiche">
+                <mat-radio-button [value]="qualifica.value">{{qualifica.name}}</mat-radio-button>
+              </ng-container>
+            </mat-radio-group>
+            <mat-error>{{getErrorMessage(form.get('qualifica'))}}</mat-error>
+        </div>
+        <mat-expansion-panel [disabled]="!form.get('amministratore').enabled" formGroupName="amministratore" class="referente-group" [expanded]="form.get('amministratore').enabled">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                  Amm./Rapp.
+                </mat-panel-title>
+                <mat-panel-description>
+                  Compilare con i dati anagrafici dell'amministratore o rappresentante
+                </mat-panel-description>
+            </mat-expansion-panel-header>
+            <mat-form-field class="div-half" appearance="outline">
+                <mat-label>Cognome</mat-label>
+                <input formControlName="cognome" matInput type="text">
+                <mat-error>{{getErrorMessage(form.get('amministratore').get('cognome'))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-half" appearance="outline">
+                <mat-label>Nome</mat-label>
+                <input formControlName="nome" matInput type="text">
+                <mat-error>{{getErrorMessage(form.get('amministratore').get('nome'))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-half" appearance="outline">
+                <mat-label>Sesso</mat-label>
+                <mat-select formControlName="genere">
+                    <mat-option>Nessuna</mat-option>
+                    <mat-option *ngFor="let genere of generi" [value]="genere.value">
+                        {{genere.name}}
+                    </mat-option>
+                </mat-select>
+                <mat-error>{{getErrorMessage(form.get('amministratore').get('genere'))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-half" appearance="outline">
+                <mat-label>Codice fiscale</mat-label>
+                <input formControlName="codicefiscale" matInput type="text">
+                <mat-error>{{getErrorMessage(form.get('amministratore').get('codicefiscale'))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-half" appearance="outline">
+                <mat-label>Partita IVA</mat-label>
+                <input formControlName="partitaiva" matInput type="text">
+                <mat-error>{{getErrorMessage(form.get('amministratore').get('partitaiva'))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-half" appearance="outline">
+                <mat-label>Titolo professionale</mat-label>
+                <input matInput type="text" formControlName="titolo_professionale" >
+                <mat-error>{{getErrorMessage(form.get('amministratore').get('titolo_professionale'))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-half" appearance="outline">
+                <mat-label>Comune</mat-label>
+                <input formControlName="comune_residenza" matInput type="text">
+                <mat-error>{{getErrorMessage(form.get('amministratore').get('comune_residenza'))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-half" appearance="outline">
+                <mat-label>Provincia</mat-label>
+                <input formControlName="provincia_residenza" matInput type="text">
+                <mat-error>{{getErrorMessage(form.get('amministratore').get('provincia_residenza'))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-half" appearance="outline">
+                <mat-label>Indirizzo</mat-label>
+                <input formControlName="indirizzo_residenza" matInput type="text">
+                <mat-error>{{getErrorMessage(form.get('amministratore').get('indirizzo_residenza'))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-a-quarter" appearance="outline">
+                <mat-label>N.</mat-label>
+                <input formControlName="civico_residenza" matInput type="text">
+                <mat-error>{{getErrorMessage(form.get('amministratore').get('civico_residenza'))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-a-quarter" appearance="outline">
+                <mat-label>Cap</mat-label>
+                <input formControlName="cap_residenza" matInput type="number">
+                <mat-error>{{getErrorMessage(form.get('amministratore').get('cap_residenza'))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-half" appearance="outline">
+                <mat-label>Telefono</mat-label>
+                <input formControlName="telefono" matInput type="number">
+                <mat-error>{{getErrorMessage(form.get('amministratore').get('telefono'))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-half" appearance="outline">
+                <mat-label>PEC</mat-label>
+                <input formControlName="pec" matInput type="email">
+                <mat-error>{{getErrorMessage(form.get('amministratore').get('pec'))}}</mat-error>
+            </mat-form-field>
+            <mat-error>{{getErrorMessage(form.get('amministratore'))}}</mat-error>
+        </mat-expansion-panel>
         <mat-expansion-panel formGroupName="dati_pratica" expanded>
             <mat-expansion-panel-header>
                 <mat-panel-title>
