--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -143,7 +143,7 @@
                         <input formControlName="email" matInput type="email">
                         <mat-error>{{getErrorMessage(formContactsOwner.controls[i].get('type'))}}</mat-error>
                     </mat-form-field>
-                    <button class="button-delete" mat-mini-fab color="warn" (click)="removeContatto(formContactsOwner, i);"><mat-icon>close</mat-icon></button>
+                    <button class="button-delete" mat-mini-fab color="warn" (click)="removeItem(formContactsOwner, i);"><mat-icon>close</mat-icon></button>
                 </mat-card>
                 <div class="div-full">
                     <button class="button-add" mat-raised-button color="primary" (click)="addContatto(form.get('owner').get('contacts'));">Aggiungi</button>
@@ -173,10 +173,10 @@
         </mat-expansion-panel>
         <div class="div-checkbox">
             <mat-checkbox formControlName="delegated"
-            (change)="changeDelegated($event, form.get('expert'))" >Sottomissione per conto terzi</mat-checkbox>
+            (change)="changeDelegated($event, form.get('experts'))" >Sottomissione per conto terzi</mat-checkbox>
             <mat-error>{{getErrorMessage(form.get('delegated'))}}</mat-error>
         </div>
-        <mat-expansion-panel [disabled]="!form.get('expert').enabled" formGroupName="expert" class="referente-group" [expanded]="form.get('expert').enabled">
+        <!-- <mat-expansion-panel [disabled]="!form.get('expert').enabled" formGroupName="expert" class="referente-group" [expanded]="form.get('expert').enabled">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                   Tecnico 
@@ -287,7 +287,7 @@
                         <input formControlName="email" matInput type="email">
                         <mat-error>{{getErrorMessage(formContactsExpert.controls[i].get('type'))}}</mat-error>
                     </mat-form-field>
-                    <button class="button-delete" mat-mini-fab color="warn" (click)="removeContatto(formContactsExpert, i);"><mat-icon>close</mat-icon></button>
+                    <button class="button-delete" mat-mini-fab color="warn" (click)="removeItem(formContactsExpert, i);"><mat-icon>close</mat-icon></button>
                 </mat-card>
                 <div class="div-full">
                     <button class="button-add" mat-raised-button color="primary" (click)="addContatto(form.get('expert').get('contacts'));">Aggiungi</button>
@@ -314,6 +314,152 @@
                 <mat-error>{{getErrorMessage(form.get('expert').get('pec'))}}</mat-error>
             </mat-form-field>
             <mat-error>{{getErrorMessage(form.get('expert'))}}</mat-error>
+        </mat-expansion-panel> -->
+        <mat-expansion-panel [disabled]="!form.get('experts').enabled" formArrayName="experts" class="referente-group" [expanded]="form.get('experts').enabled">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                  Tecnici 
+                </mat-panel-title>
+                <mat-panel-description>
+                  Compilare con i dati anagrafici dei tecnici
+                </mat-panel-description>
+            </mat-expansion-panel-header>
+            <mat-card class="array-list" *ngFor="let expert of formExperts.controls; let j = index;" [formGroupName]="j">
+                <mat-card-title>Tecnico {{j+1}}</mat-card-title>
+                <mat-form-field class="div-half" appearance="outline">
+                    <mat-label>Tipologia</mat-label>
+                    <mat-select formControlName="type" (selectionChange)="changedTipologiaEsperto(formExperts.controls[j], $event)">
+                        <mat-option>Nessuna</mat-option>
+                        <mat-option *ngFor="let tipologia of tipologie" [value]="tipologia.value">
+                            {{tipologia.name}}
+                        </mat-option>
+                    </mat-select>
+                    <mat-error>{{getErrorMessage(formExperts.controls[j].get('type'))}}</mat-error>
+                </mat-form-field>
+                <mat-form-field class="div-half" appearance="outline">
+                    <mat-label>Sesso</mat-label>
+                    <mat-select formControlName="gender">
+                        <mat-option>Nessuna</mat-option>
+                        <mat-option *ngFor="let gender of generi" [value]="gender.value">
+                            {{gender.name}}
+                        </mat-option>
+                    </mat-select>
+                    <mat-error>{{getErrorMessage(formExperts.controls[j].get('gender'))}}</mat-error>
+                </mat-form-field>
+                <mat-form-field class="div-half" appearance="outline">
+                    <mat-label>Cognome</mat-label>
+                    <input formControlName="last_name" matInput type="text">
+                    <mat-error>{{getErrorMessage(formExperts.controls[j].get('last_name'))}}</mat-error>
+                </mat-form-field>
+                <mat-form-field class="div-half" appearance="outline">
+                    <mat-label>Nome</mat-label>
+                    <input formControlName="first_name" matInput type="text">
+                    <mat-error>{{getErrorMessage(formExperts.controls[j].get('first_name'))}}</mat-error>
+                </mat-form-field>
+                <mat-form-field class="div-half" appearance="outline">
+                    <mat-label>Codice fiscale</mat-label>
+                    <input formControlName="fiscal_code" matInput type="text">
+                    <mat-error>{{getErrorMessage(formExperts.controls[j].get('fiscal_code'))}}</mat-error>
+                </mat-form-field>
+                <mat-form-field class="div-half" appearance="outline">
+                    <mat-label>Partita IVA</mat-label>
+                    <input formControlName="vat" matInput type="text">
+                    <mat-error>{{getErrorMessage(formExperts.controls[j].get('vat'))}}</mat-error>
+                </mat-form-field>
+                <mat-form-field class="div-full" appearance="outline">
+                    <mat-label>Ragione sociale</mat-label>
+                    <input matInput type="text" formControlName="name" >
+                    <mat-error>{{getErrorMessage(formExperts.controls[j].get('name'))}}</mat-error>
+                </mat-form-field>
+                <ng-container formGroupName="address">
+                    <mat-form-field class="div-two-thirds" appearance="outline">
+                        <mat-label>Indirizzo</mat-label>
+                        <input formControlName="street_name" matInput type="text">
+                        <mat-error>{{getErrorMessage(formExperts.controls[j].get('address').get('street_name'))}}</mat-error>
+                    </mat-form-field>
+                    <mat-form-field class="div-a-third" appearance="outline">
+                        <mat-label>Cap</mat-label>
+                        <input formControlName="postcode" matInput type="number">
+                        <mat-error>{{getErrorMessage(formExperts.controls[j].get('address').get('postcode'))}}</mat-error>
+                    </mat-form-field>
+                    <mat-form-field class="div-half" appearance="outline">
+                        <mat-label>Provincia</mat-label>
+                        <input formControlName="county" matInput type="text">
+                        <mat-error>{{getErrorMessage(formExperts.controls[j].get('address').get('county'))}}</mat-error>
+                    </mat-form-field>
+                    <mat-form-field class="div-half" appearance="outline">
+                        <mat-label>Comune</mat-label>
+                        <input formControlName="city" matInput type="text">
+                        <mat-error>{{getErrorMessage(formExperts.controls[j].get('address').get('city'))}}</mat-error>
+                    </mat-form-field>
+                </ng-container>
+                <mat-expansion-panel [disabled]="!getArray('experts/'+j+'/contacts').enabled" formArrayName="contacts" [expanded]="getArray('experts/'+j+'/contacts').enabled && getArray('experts/'+j+'/contacts').controls.length > 0">
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                          Contatti 
+                        </mat-panel-title>
+                        <mat-panel-description>
+                          Lista contatti
+                        </mat-panel-description>
+                    </mat-expansion-panel-header>
+                    <mat-card class="array-list" *ngFor="let contatto of getArray('experts/'+j+'/contacts').controls; let i = index;" [formGroupName]="i">
+                        <mat-form-field class="div-half" appearance="outline">
+                            <mat-label>Tipo</mat-label>
+                            <mat-select formControlName="type">
+                                <mat-option>Nessuna</mat-option>
+                                <mat-option *ngFor="let type of tipologie_contatto" [value]="type.value">
+                                    {{type.name}}
+                                </mat-option>
+                            </mat-select>
+                            <mat-error>{{getErrorMessage(getArray('experts/'+j+'/contacts').controls[i].get('type'))}}</mat-error>
+                        </mat-form-field>
+                        <mat-form-field class="div-half" appearance="outline">
+                            <mat-label>Nome referente</mat-label>
+                            <input formControlName="name" matInput type="text">
+                            <mat-error>{{getErrorMessage(getArray('experts/'+j+'/contacts').controls[i].get('type'))}}</mat-error>
+                        </mat-form-field>
+                        <mat-form-field class="div-half" appearance="outline">
+                            <mat-label>Telefono</mat-label>
+                            <input formControlName="phone" matInput type="number">
+                            <mat-error>{{getErrorMessage(getArray('experts/'+j+'/contacts').controls[i].get('type'))}}</mat-error>
+                        </mat-form-field>
+                        <mat-form-field class="div-half" appearance="outline">
+                            <mat-label>Email</mat-label>
+                            <input formControlName="email" matInput type="email">
+                            <mat-error>{{getErrorMessage(getArray('experts/'+j+'/contacts').controls[i].get('type'))}}</mat-error>
+                        </mat-form-field>
+                        <button class="button-delete" mat-mini-fab color="warn" (click)="removeItem(getArray('experts/'+j+'/contacts'), i);"><mat-icon>close</mat-icon></button>
+                    </mat-card>
+                    <div class="div-full">
+                        <button class="button-add" mat-raised-button color="primary" (click)="addContatto(formExperts.controls[j].get('contacts'));">Aggiungi</button>
+                    </div>
+                </mat-expansion-panel>
+                <mat-form-field class="div-half" appearance="outline">
+                    <mat-label>Telefono</mat-label>
+                    <input formControlName="phone" matInput type="number" (change)="check(formExperts.controls[j], 'phone','cellular')">
+                    <mat-error>{{getErrorMessage(formExperts.controls[j].get('phone'))}}</mat-error>
+                </mat-form-field>
+                <mat-form-field class="div-half" appearance="outline">
+                    <mat-label>Cellulare</mat-label>
+                    <input formControlName="cellular" matInput type="number" (change)="check(formExperts.controls[j], 'cellular','phone')">
+                    <mat-error>{{getErrorMessage(formExperts.controls[j].get('cellular'))}}</mat-error>
+                </mat-form-field>
+                <mat-form-field class="div-half" appearance="outline">
+                    <mat-label>Email</mat-label>
+                    <input formControlName="email" matInput type="email">
+                    <mat-error>{{getErrorMessage(formExperts.controls[j].get('email'))}}</mat-error>
+                </mat-form-field>
+                <mat-form-field class="div-half" appearance="outline">
+                    <mat-label>PEC</mat-label>
+                    <input formControlName="pec" matInput type="email">
+                    <mat-error>{{getErrorMessage(formExperts.controls[j].get('pec'))}}</mat-error>
+                </mat-form-field>
+                <mat-error>{{getErrorMessage(formExperts.controls[j])}}</mat-error>
+                <button class="button-delete" mat-mini-fab color="warn" (click)="removeItem(formExperts, j);"><mat-icon>close</mat-icon></button>
+            </mat-card>
+            <div class="div-full">
+                <button class="button-add" mat-raised-button color="primary" (click)="addExpert(formExperts);">Aggiungi</button>
+            </div>
         </mat-expansion-panel>
         <div class="div-radio-group">
             <mat-label>In qualità di:</mat-label>
@@ -494,7 +640,7 @@
                         <input formControlName="email" matInput type="email">
                         <mat-error>{{getErrorMessage(formContactsDitta.controls[i].get('type'))}}</mat-error>
                     </mat-form-field>
-                    <button class="button-delete" mat-mini-fab color="warn" (click)="removeContatto(formContactsDitta, i);"><mat-icon>close</mat-icon></button>
+                    <button class="button-delete" mat-mini-fab color="warn" (click)="removeItem(formContactsDitta, i);"><mat-icon>close</mat-icon></button>
                 </mat-card>
                 <div class="div-full">
                     <button class="button-add" mat-raised-button color="primary" (click)="addContatto(form.get('supplier_business').get('contacts'));">Aggiungi</button>
