--- a/src/assets/css/form-style.scss
+++ b/src/assets/css/form-style.scss
@@ -105,6 +105,10 @@ mat-radio-button{
     margin-left: 1em;
 }
 
+.mat-form-field-disabled{
+    display: none !important;
+}
+
 .upload-button .mat-raised-button {
     background-color: #3f51b5;
     color: white;
